// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components -> EnterTextField snapshot should render TextField with props 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-marginDense MuiTextField-root className test"
  onKeyUp={[Function]}
>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-marginDense"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      autoFocus={true}
      className="MuiInputBase-input MuiInput-input MuiInputBase-inputMarginDense MuiInput-inputMarginDense"
      defaultValue="initValue test"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="placeholder test"
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Components -> EnterTextField snapshot should render TextField without props 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-marginDense MuiTextField-root"
  onKeyUp={[Function]}
>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-marginDense"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input MuiInputBase-inputMarginDense MuiInput-inputMarginDense"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
</div>
`;
